// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenTelemetryAdapter processes app event as span 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app event as span 2`] = `
Array [
  Span {
    "_duration": Array [
      NaN,
      NaN,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "fc4a7fe5388ccba9",
      "traceFlags": 1,
      "traceId": "9dd0f8b20c7697525beca19454bfbe06",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            [Circular],
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": Timeout {
                "_destroyed": false,
                "_idleNext": TimersList {
                  "_idleNext": [Circular],
                  "_idlePrev": [Circular],
                  "expiry": 8101,
                  "id": -9007199254740984,
                  "msecs": 5000,
                  "priorityQueuePosition": 1,
                },
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3107,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 45,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": Timeout {
                  "_destroyed": false,
                  "_idleNext": [Circular],
                  "_idlePrev": [Circular],
                  "_idleStart": 3107,
                  "_idleTimeout": 5000,
                  "_onTimeout": [Function],
                  "_repeat": null,
                  "_timerArgs": undefined,
                  Symbol(refed): false,
                  Symbol(kHasPrimitive): false,
                  Symbol(asyncId): 45,
                  Symbol(triggerId): 0,
                },
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3120,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 48,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "my custom event",
      "parentSpanId": "12345",
    },
    "endTime": Array [
      NaN,
      NaN,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "my custom event",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620155556185,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app exception as span 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app exception as span 2`] = `
Array [
  Span {
    "_duration": Array [
      NaN,
      NaN,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "e87141cebf451607",
      "traceFlags": 1,
      "traceId": "a7b92fe106c3583ca2adea07e2a3b48d",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            [Circular],
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": Timeout {
                "_destroyed": false,
                "_idleNext": Timeout {
                  "_destroyed": false,
                  "_idleNext": TimersList {
                    "_idleNext": [Circular],
                    "_idlePrev": [Circular],
                    "expiry": 8101,
                    "id": -9007199254740984,
                    "msecs": 5000,
                    "priorityQueuePosition": 1,
                  },
                  "_idlePrev": [Circular],
                  "_idleStart": 3101,
                  "_idleTimeout": 5000,
                  "_onTimeout": [Function],
                  "_repeat": null,
                  "_timerArgs": undefined,
                  Symbol(refed): false,
                  Symbol(kHasPrimitive): false,
                  Symbol(asyncId): 42,
                  Symbol(triggerId): 0,
                },
                "_idlePrev": [Circular],
                "_idleStart": 3107,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 45,
                Symbol(triggerId): 0,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3120,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 48,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": Timeout {
                  "_destroyed": false,
                  "_idleNext": [Circular],
                  "_idlePrev": Timeout {
                    "_destroyed": false,
                    "_idleNext": [Circular],
                    "_idlePrev": [Circular],
                    "_idleStart": 3120,
                    "_idleTimeout": 5000,
                    "_onTimeout": [Function],
                    "_repeat": null,
                    "_timerArgs": undefined,
                    Symbol(refed): false,
                    Symbol(kHasPrimitive): false,
                    Symbol(asyncId): 48,
                    Symbol(triggerId): 0,
                  },
                  "_idleStart": 3107,
                  "_idleTimeout": 5000,
                  "_onTimeout": [Function],
                  "_repeat": null,
                  "_timerArgs": undefined,
                  Symbol(refed): false,
                  Symbol(kHasPrimitive): false,
                  Symbol(asyncId): 45,
                  Symbol(triggerId): 0,
                },
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3123,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 51,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
      "parentSpanId": "{long operation id}",
    },
    "endTime": Array [
      NaN,
      NaN,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "at module.exports (C:/home/site/wwwroot/functionName/index.js:266:43)",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620233096802,
      0,
    ],
    "status": Object {
      "code": 2,
      "message": "Error: Throwing an uncaught error on purpose.",
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency as spans 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app request and dependency as spans 2`] = `
Array [
  Span {
    "_duration": Array [
      9,
      159179688,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "0a6e63c9bab295c3",
      "traceFlags": 1,
      "traceId": "6da285ba94995287fee2220fab150382",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            [Circular],
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3101,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 42,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "{function name}",
      "parentSpanId": "12345",
    },
    "endTime": Array [
      1619736074132,
      159179688,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "{function name}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1619736074123,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency as spans 3`] = `
Array [
  Span {
    "_duration": Array [
      9,
      159179688,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "0a6e63c9bab295c3",
      "traceFlags": 1,
      "traceId": "6da285ba94995287fee2220fab150382",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            [Circular],
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "8747f3a59aed6d6d",
                "traceFlags": 1,
                "traceId": "76a880d67775b136d0d379a2e5110a85",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "External/{name property of client.trackDependency}",
                "parentSpanId": "12345",
              },
              "endTime": Array [
                1620165671171,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "External/{name property of client.trackDependency}",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620165670940,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3101,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 42,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "{function name}",
      "parentSpanId": "12345",
    },
    "endTime": Array [
      1619736074132,
      159179688,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "{function name}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1619736074123,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_duration": Array [
      231,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "8747f3a59aed6d6d",
      "traceFlags": 1,
      "traceId": "76a880d67775b136d0d379a2e5110a85",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            Span {
              "_duration": Array [
                9,
                159179688,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "0a6e63c9bab295c3",
                "traceFlags": 1,
                "traceId": "6da285ba94995287fee2220fab150382",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "{function name}",
                "parentSpanId": "12345",
              },
              "endTime": Array [
                1619736074132,
                159179688,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "{function name}",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1619736074123,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            [Circular],
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": [Circular],
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3101,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 42,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "External/{name property of client.trackDependency}",
      "parentSpanId": "12345",
    },
    "endTime": Array [
      1620165671171,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "External/{name property of client.trackDependency}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620165670940,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency when sent as array of strings 1`] = `Array []`;

exports[`OpenTelemetryAdapter processes app request and dependency when sent as array of strings 2`] = `
Array [
  Span {
    "_duration": Array [
      231,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "21df2e2817c405a6",
      "traceFlags": 1,
      "traceId": "be269510a5382a19e5d697fd38582ef1",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            [Circular],
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "64ddf57211502c9b",
                "traceFlags": 1,
                "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "select customers proc",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372280,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "select customers proc",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674372049,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                30021,
                545654297,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "33afab0a64265a63",
                "traceFlags": 1,
                "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "functionName",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674391081,
                545654297,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "functionName",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674361060,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "node buffer",
      "parentSpanId": "parentId",
    },
    "endTime": Array [
      1620674372139,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "node buffer",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620674371908,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_duration": Array [
      231,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "64ddf57211502c9b",
      "traceFlags": 1,
      "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "21df2e2817c405a6",
                "traceFlags": 1,
                "traceId": "be269510a5382a19e5d697fd38582ef1",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "node buffer",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372139,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "node buffer",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674371908,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            [Circular],
            Span {
              "_duration": Array [
                30021,
                545654297,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "33afab0a64265a63",
                "traceFlags": 1,
                "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "functionName",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674391081,
                545654297,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "functionName",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674361060,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "select customers proc",
      "parentSpanId": "parentId",
    },
    "endTime": Array [
      1620674372280,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "select customers proc",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620674372049,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_duration": Array [
      30021,
      545654297,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "33afab0a64265a63",
      "traceFlags": 1,
      "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "21df2e2817c405a6",
                "traceFlags": 1,
                "traceId": "be269510a5382a19e5d697fd38582ef1",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "node buffer",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372139,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "node buffer",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674371908,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "64ddf57211502c9b",
                "traceFlags": 1,
                "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "select customers proc",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372280,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "select customers proc",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674372049,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            [Circular],
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "functionName",
      "parentSpanId": "parentId",
    },
    "endTime": Array [
      1620674391081,
      545654297,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "functionName",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620674361060,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;

exports[`OpenTelemetryAdapter processes app request and dependency when sent as array of strings 3`] = `
Array [
  Span {
    "_duration": Array [
      231,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "21df2e2817c405a6",
      "traceFlags": 1,
      "traceId": "be269510a5382a19e5d697fd38582ef1",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            [Circular],
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "64ddf57211502c9b",
                "traceFlags": 1,
                "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "select customers proc",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372280,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "select customers proc",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674372049,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                30021,
                545654297,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "33afab0a64265a63",
                "traceFlags": 1,
                "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "functionName",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674391081,
                545654297,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "functionName",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674361060,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "b4d2286c444cc74f",
                "traceFlags": 1,
                "traceId": "447a6569017176021f4c02b41077a1aa",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "External/{name property of client.trackDependency}",
                "parentSpanId": "12345",
              },
              "endTime": Array [
                1620165671171,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "External/{name property of client.trackDependency}",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620165670940,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "node buffer",
      "parentSpanId": "parentId",
    },
    "endTime": Array [
      1620674372139,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "node buffer",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620674371908,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_duration": Array [
      231,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "64ddf57211502c9b",
      "traceFlags": 1,
      "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "21df2e2817c405a6",
                "traceFlags": 1,
                "traceId": "be269510a5382a19e5d697fd38582ef1",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "node buffer",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372139,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "node buffer",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674371908,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            [Circular],
            Span {
              "_duration": Array [
                30021,
                545654297,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "33afab0a64265a63",
                "traceFlags": 1,
                "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "functionName",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674391081,
                545654297,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "functionName",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674361060,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "b4d2286c444cc74f",
                "traceFlags": 1,
                "traceId": "447a6569017176021f4c02b41077a1aa",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "External/{name property of client.trackDependency}",
                "parentSpanId": "12345",
              },
              "endTime": Array [
                1620165671171,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "External/{name property of client.trackDependency}",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620165670940,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "select customers proc",
      "parentSpanId": "parentId",
    },
    "endTime": Array [
      1620674372280,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "select customers proc",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620674372049,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_duration": Array [
      30021,
      545654297,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "33afab0a64265a63",
      "traceFlags": 1,
      "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "21df2e2817c405a6",
                "traceFlags": 1,
                "traceId": "be269510a5382a19e5d697fd38582ef1",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "node buffer",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372139,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "node buffer",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674371908,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "64ddf57211502c9b",
                "traceFlags": 1,
                "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "select customers proc",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372280,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "select customers proc",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674372049,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            [Circular],
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "b4d2286c444cc74f",
                "traceFlags": 1,
                "traceId": "447a6569017176021f4c02b41077a1aa",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "External/{name property of client.trackDependency}",
                "parentSpanId": "12345",
              },
              "endTime": Array [
                1620165671171,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "External/{name property of client.trackDependency}",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620165670940,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "functionName",
      "parentSpanId": "parentId",
    },
    "endTime": Array [
      1620674391081,
      545654297,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "functionName",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620674361060,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
  Span {
    "_duration": Array [
      231,
      0,
    ],
    "_ended": true,
    "_spanContext": Object {
      "spanId": "b4d2286c444cc74f",
      "traceFlags": 1,
      "traceId": "447a6569017176021f4c02b41077a1aa",
      "traceState": undefined,
    },
    "_spanLimits": Object {
      "attributeCountLimit": 128,
      "eventCountLimit": 128,
      "linkCountLimit": 128,
    },
    "_spanProcessor": MultiSpanProcessor {
      "_spanProcessors": Array [
        BatchSpanProcessor {
          "_exportTimeoutMillis": 30000,
          "_exporter": CollectorTraceExporter {
            "DEFAULT_HEADERS": Object {
              "api-key": "mock-insert-key",
            },
            "_concurrencyLimit": Infinity,
            "_isShutdown": false,
            "_sendingPromises": Array [],
            "_shuttingDownPromise": Promise {},
            "agent": Agent {
              "_events": Object {
                "free": [Function],
                "newListener": [Function],
              },
              "_eventsCount": 2,
              "_maxListeners": undefined,
              "_sessionCache": Object {
                "list": Array [],
                "map": Object {},
              },
              "defaultPort": 443,
              "freeSockets": Object {},
              "keepAlive": true,
              "keepAliveMsecs": 1000,
              "maxCachedSessions": 100,
              "maxFreeSockets": 256,
              "maxSockets": Infinity,
              "maxTotalSockets": Infinity,
              "options": Object {
                "keepAlive": true,
                "path": null,
              },
              "protocol": "https:",
              "requests": Object {},
              "scheduling": "fifo",
              "sockets": Object {},
              "totalSocketCount": 0,
              Symbol(kCapture): false,
            },
            "attributes": undefined,
            "headers": Object {
              "api-key": "mock-insert-key",
            },
            "shutdown": [Function],
            "url": "https://otlp.nr-data.net:4317/v1/traces",
          },
          "_finishedSpans": Array [
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "21df2e2817c405a6",
                "traceFlags": 1,
                "traceId": "be269510a5382a19e5d697fd38582ef1",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "node buffer",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372139,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "node buffer",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674371908,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                231,
                0,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "64ddf57211502c9b",
                "traceFlags": 1,
                "traceId": "a6ab97a669dc45bcd0a2823f663f5bbe",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "select customers proc",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674372280,
                0,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "select customers proc",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674372049,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            Span {
              "_duration": Array [
                30021,
                545654297,
              ],
              "_ended": true,
              "_spanContext": Object {
                "spanId": "33afab0a64265a63",
                "traceFlags": 1,
                "traceId": "d1fd950c2d8d8530d5a5425357493f5e",
                "traceState": undefined,
              },
              "_spanLimits": Object {
                "attributeCountLimit": 128,
                "eventCountLimit": 128,
                "linkCountLimit": 128,
              },
              "_spanProcessor": [Circular],
              "attributes": Object {
                "name": "functionName",
                "parentSpanId": "parentId",
              },
              "endTime": Array [
                1620674391081,
                545654297,
              ],
              "events": Array [],
              "instrumentationLibrary": Object {
                "name": "default",
                "version": undefined,
              },
              "kind": 0,
              "links": Array [],
              "name": "functionName",
              "parentSpanId": undefined,
              "resource": Resource {
                "attributes": Object {
                  "service.name": "unknown_service:/usr/local/bin/node",
                  "telemetry.sdk.language": "nodejs",
                  "telemetry.sdk.name": "opentelemetry",
                  "telemetry.sdk.version": "0.23.0",
                },
              },
              "startTime": Array [
                1620674361060,
                0,
              ],
              "status": Object {
                "code": 1,
              },
            },
            [Circular],
          ],
          "_isShutdown": false,
          "_maxExportBatchSize": 512,
          "_maxQueueSize": 1000,
          "_scheduledDelayMillis": 5000,
          "_shuttingDownPromise": Promise {},
          "_timer": Timeout {
            "_destroyed": false,
            "_idleNext": Timeout {
              "_destroyed": false,
              "_idleNext": TimersList {
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "expiry": 8101,
                "id": -9007199254740984,
                "msecs": 5000,
                "priorityQueuePosition": 1,
              },
              "_idlePrev": [Circular],
              "_idleStart": 3101,
              "_idleTimeout": 5000,
              "_onTimeout": [Function],
              "_repeat": null,
              "_timerArgs": undefined,
              Symbol(refed): false,
              Symbol(kHasPrimitive): false,
              Symbol(asyncId): 42,
              Symbol(triggerId): 0,
            },
            "_idlePrev": TimersList {
              "_idleNext": [Circular],
              "_idlePrev": Timeout {
                "_destroyed": false,
                "_idleNext": [Circular],
                "_idlePrev": [Circular],
                "_idleStart": 3101,
                "_idleTimeout": 5000,
                "_onTimeout": [Function],
                "_repeat": null,
                "_timerArgs": undefined,
                Symbol(refed): false,
                Symbol(kHasPrimitive): false,
                Symbol(asyncId): 42,
                Symbol(triggerId): 0,
              },
              "expiry": 8101,
              "id": -9007199254740984,
              "msecs": 5000,
              "priorityQueuePosition": 1,
            },
            "_idleStart": 3107,
            "_idleTimeout": 5000,
            "_onTimeout": [Function],
            "_repeat": null,
            "_timerArgs": undefined,
            Symbol(refed): false,
            Symbol(kHasPrimitive): false,
            Symbol(asyncId): 45,
            Symbol(triggerId): 0,
          },
        },
      ],
    },
    "attributes": Object {
      "name": "External/{name property of client.trackDependency}",
      "parentSpanId": "12345",
    },
    "endTime": Array [
      1620165671171,
      0,
    ],
    "events": Array [],
    "instrumentationLibrary": Object {
      "name": "default",
      "version": undefined,
    },
    "kind": 0,
    "links": Array [],
    "name": "External/{name property of client.trackDependency}",
    "parentSpanId": undefined,
    "resource": Resource {
      "attributes": Object {
        "service.name": "unknown_service:/usr/local/bin/node",
        "telemetry.sdk.language": "nodejs",
        "telemetry.sdk.name": "opentelemetry",
        "telemetry.sdk.version": "0.23.0",
      },
    },
    "startTime": Array [
      1620165670940,
      0,
    ],
    "status": Object {
      "code": 1,
    },
  },
]
`;
